# openapi-generator-rs-cli

./: .gitignore  Cargo.toml  Containerfile.dev  LICENSE  README.md  build.rs
.devcontainer/: devcontainer.json
examples/simple/: Cargo.toml
examples/simple/client/: Cargo.toml  README.md
examples/simple/client/src/apis/: pet_api.rs  user_api.rs
examples/simple/src/: main.rs
src/: lib.rs  main.rs  path.rs
